--- a/catalog/view/theme/apple/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/apple/stylesheet/stylesheet.sass
@@ -127,5 +127,17 @@ ul.col-md-3
 .navbar-toggle
   margin-right: 0
 
+.owl-wrapper-outer
+  border: none
+  box-shadow: none
+  border-radius: 0
+
+.owl-carousel .owl-buttons div i
+	font-size: 35px
+	opacity: .4
+
+.top-menu
+  margin-bottom: 40px
+
 
 @import "media"
